validate input and use colors to indicate validity as well as by enabling or disabling the save buttons. Also added table name header to FK columns.See issue #11

--- a/src/main/webapp/style/forms.css
+++ b/src/main/webapp/style/forms.css
@@ -145,4 +145,12 @@ width: 20em;
 	background-color:#ebf4fb;
 }
 
+textarea.ng-dirty.ng-invalid{
+  background-color: #f2dede;
+}
+
+textarea.ng-dirty.ng-valid{
+  background-color:#ebf4fb;
+}
+
 
