Changed buttons to sentence case - see issue #46

--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -48,7 +48,7 @@
 				<h3>Query</h3>
 				<textarea name="query" class="vqd_sql" placeholder="No data selected"></textarea>
 				<p>
-					<button class="button" ng-click="runQuery()">Run Query</button>
+					<button class="button" ng-click="runQuery()">Run query</button>
 					<button class="button cancel" ng-click="clearQuery()">Clear query</button>
 				</p>
 			</div>
