--- a/src/main/webapp/table-view/components/addrow/addrow.html
+++ b/src/main/webapp/table-view/components/addrow/addrow.html
@@ -52,7 +52,7 @@
 						referenced-label="null"/>
 					</td>
 					<td class="add">
-						<p><div><button class="button" ng-disabled="addDataForm.$invalid" ng-click="addRow()">Add New Row</button></div></p>
+						<p><div><button class="button" ng-disabled="addDataForm.$invalid" ng-click="addRow()">Add new row</button></div></p>
 					</td>
 				</tr>
 			</tbody>
