various fixes for filtering, including destroying and restoring the filter control, and using scope vars to control the tabelist behaviour rather than method params

--- a/src/main/webapp/table-view/components/filter/filter.html
+++ b/src/main/webapp/table-view/components/filter/filter.html
@@ -3,13 +3,11 @@
 	<div id="filter-inner">
 	<div id="rqb">&nbsp;</div>
 	<p>
-		<form id="filter-form">
-			<input type="hidden" id="filter-form-element" name="filter" value="">
-			<input type="hidden" id="params-form-element" name="params" value="">
+			<!-- Not yet implemented
 			<input type="checkbox" id="filter-case" name="filter-case" value="checked">Case sensitive<br><br>
-			<button type="button" class="button" id="filter-button" ng-click="applyFilter()"><span>Apply filter</span></button>
-			<button type="button" class="button" id="clear-filter-button" ng-click="clearFilter()"><span>Clear filter</span></button>
-	    </form>
+			-->
+			<a class="button" id="filter-button" ng-click="applyFilter()">Apply filter</a>
+			<a class="button" id="clear-filter-button" ng-click="clearFilter()">Clear filter</a>
 	</p>
 	</div>
 </div>
