fixed issue with drop down search - this was a holdover from fixing the multiple-joins bug

--- a/src/main/webapp/table-view/components/addrow/addrow.html
+++ b/src/main/webapp/table-view/components/addrow/addrow.html
@@ -47,7 +47,7 @@
 						class="selectedDataItem {{column.columnName}} bigdrop"
 						id="selectedDataItemForTableRow_{{newRow.cell[newRowKey].value}}_{{column.columnName}}"
 						local-column="{{column.columnName}}"
-						referenced-column="referencedColumn[column.referencedTable]"
+						referenced-column="referencedColumn[column.columnName]"
 						referenced-table="{{column.referencedTable}}"
 						referenced-label="null"/>
 					</td>
